--- a/2. IAM, Accounts and AWS Organizations.md
+++ b/2. IAM, Accounts and AWS Organizations.md
@@ -1,4 +1,4 @@
-**IAM Identity Policies**
+## IAM Identity Policies
 
 * A type of policy that gets attached to IAM identities (IAM Users, IAM Groups, and IAM Roles).
 * It grants or denies access to AWS products and features to any identity which uses that policy.
