Another set of edits

--- a/9. Relational Database Service (RDS).md
+++ b/9. Relational Database Service (RDS).md
@@ -528,7 +528,6 @@ High Water Mark
 * Restores create a new Cluster.
 * Fast clones make a new database from an existing database much faster than copying all the data (copy-on-write).
 
-
 Backtrack
 	\- can be used which allow in-place rewinds to a previous point in time of up to 72 hours (needs to be Enabled on a per Cluster basis).
 
@@ -592,7 +591,9 @@ Global Database
 * Replicas can be promoted to Read and Write.
 * A Maximum of 5 Secondary Regions.
 
-## Aurora Multi-Master Writes## 
+## Aurora Multi-Master Writes 
+
+**Single Master Setup**
 
 * Default Aurora mode is Single Master.
 
@@ -604,6 +605,7 @@ Cluster Endpoint
 
 Read Endpoint
 	\- used for load balancing reads across any of the read only replicas.
+
 
 **Multi Master Setup**
 	\- all of the instances by default are capable of both Read and Write operations.
