Edit: RDS and S3

--- a/9. Relational Database Service (RDS).md
+++ b/9. Relational Database Service (RDS).md
@@ -390,7 +390,7 @@ Committed
 ![Relational Database Service (RDS)-07-24-2024-17](images/Relational%20Database%20Service%20(RDS)-07-24-2024-17.png)
 
 1. Read Performance and Read Scaling
-	\- you can create 5 Direct Read Replicas per DB instance.
+	\- you can create 15 Direct Read Replicas per DB instance except for Oracle DB Engine (Maximum of 5).
 	\- provides additional read performance.
 	\- read replicas can have own read replicas (but lag becomes a problem).
 	\- global performance improvements.
