--- a/9. Relational Database Service (RDS).md
+++ b/9. Relational Database Service (RDS).md
@@ -483,7 +483,7 @@ Cluster Volume
 ![Relational Database Service (RDS)-07-24-2024-22](images/Relational%20Database%20Service%20(RDS)-07-24-2024-22.png)
 
 * Storage has a minimum of 10GB maximum size of 128TB.
-* It also has 6 Replicas across Multiple AZs
+* It also has 6 Replicas across Multiple AZs (Shared Storage Cluster).
 * When data is written to the Primary Instance, Aurora Synchronously replicates that data across all of these 6 storage nodes.
 * Spread across the AZs which are associated with your Cluster.
 * All instances have access to these storage nodes.
