Edits: Serverless, Others, S3, Advanced EC2, and RDS

--- a/12. Serverless and Application Services.md
+++ b/12. Serverless and Application Services.md
@@ -811,6 +811,10 @@ Glue Jobs
 
 * You are only billed for the resources that you consume.
 
+Job Bookmarking
+	\- keeps track of the last processed data, allowing succeeding jobs to run only to process new data.
+	\- eliminates the need to reprocess old data.
+
 ## Amazon MQ 101
 
 * Amazon MQ is an open-source message broker.
