--- a/19. Other Services & Features.md
+++ b/19. Other Services & Features.md
@@ -107,3 +107,7 @@ High-Cardinality (Database Concept)
 	\- capable of filtering traffic at the perimeter of your VPC.
 	\- supports domain name stateful network traffic inspection.
 
+**AWS Cost Explorer**
+	\- is a service provided by Amazon Web Services (AWS) that helps you visualize, understand, and analyze your AWS costs and usage.
+
+* It is possible to programmatically query your cost and usage data via the Cost Explorer API.
