--- a/3. Simple Storage Service (S3).md
+++ b/3. Simple Storage Service (S3).md
@@ -628,6 +628,7 @@ Keypoints
 * S3/Glacier Select let you use SQL-like statements to select a part of that object, and this part is sent to the client in a pre-filtered way.
 * You only consume the pre-filtered part of that object, the part you select.
 * S3 allow you to operate on a number of file formats with this level of functionality (CSV, JSON, Parquet, BZIP 2 Compression for CSV and JSON).
+* Requires Bucket's name and Object key (Name).
 
 ![Simple Storage Service (S3)-07-01-2024-37](images/Simple%20Storage%20Service%20(S3)-07-01-2024-37.png)
 
