--- a/7. Advanced EC2 using User Data.md
+++ b/7. Advanced EC2 using User Data.md
@@ -283,3 +283,11 @@ EBS Optimized Instance
 	\- does not impact the data performance.
 	\- most instances support it and have it enabled by default at no extra charge.
 	\- some older instances support it, but enabling comes at an extra cost.
+
+## Other EC2 Features
+
+Hibernation
+	\- allows applications to pick up exactly where they left off.
+	\- reducing the startup time taken by applications, and saves effort in setting up the environment or applications all over again.
+
+* It is not possible to Enable or Disable Hibernation once instance is launched.
