--- a/9. Relational Database Service (RDS).md
+++ b/9. Relational Database Service (RDS).md
@@ -693,3 +693,7 @@ Schema Conversion Tool (SCT)
 
 ![Relational Database Service (RDS)-07-24-2024-28](images/Relational%20Database%20Service%20(RDS)-07-24-2024-28.png)
 
+## Other RDS and Aurora Features
+
+RDS Storage Auto Scaling
+	\- automatically scales storage capacity in response to growing database workloads, with zero downtime.
