Edit: Serverless, NoSQL, Containers, & RDS

--- a/17. NoSQL Databases & DynamoDB.md
+++ b/17. NoSQL Databases & DynamoDB.md
@@ -357,6 +357,7 @@ Federated Query
 * Data is replicated to 1 additional node.
 * Automatic backups happen to S3 by Default around every 8 hours or every 5GB of data written to the cluster with a configurable retention period.
 * You can also create Manual Snapshots to S3.
+* You can configure Snapshots to copy to another AWS Region.
 
 Leader Node
 	\- you interact most with.
