--- a/6. Containers & Elastic Container Service (ECS).md
+++ b/6. Containers & Elastic Container Service (ECS).md
@@ -301,3 +301,10 @@ Key Concepts:
 **EKS Distro**
 	\- helps you manually run clusters using a Kubernetes distribution of compatible versions of the latest release and its dependencies, tested for reliability and security.
 
+* Supports 2 Auto Scaling products
+
+1. Karpenter
+	\- a flexible, high-performance Kubernetes cluster autoscaler that launches appropriately sized compute resources, like Amazon EC2 instances, in response to changing application load.
+
+2. Kubernetes Cluster Autoscaler
+	\- automatically adjusts the number of nodes in your cluster when pods fail or are rescheduled onto other nodes. The Cluster Autoscaler uses Auto Scaling groups.
