Edit: Overview, Fundamentals, CDN, Advanced EC2, RDS, and Others.

--- a/13. Global Content Delivery and Optimization.md
+++ b/13. Global Content Delivery and Optimization.md
@@ -111,6 +111,7 @@ Private Certificate Authority
 
 ![Global Content Delivery and Optimization-08-03-2024-3](images/Global%20Content%20Delivery%20and%20Optimization-08-03-2024-3.png)
 
+* If ACM is not available in your region, use AWS CLI to upload your third-party certificate to the IAM Certificate Store.
 ## CloudFront and SSL/TLS
 
 * Each CloudFront Distribution receives a Default Domain Name (CNAME) (htttps://<\random>.cloudfront.net/) upon creation.
