--- a/19. Other Services & Features.md
+++ b/19. Other Services & Features.md
@@ -111,3 +111,10 @@ High-Cardinality (Database Concept)
 	\- is a service provided by Amazon Web Services (AWS) that helps you visualize, understand, and analyze your AWS costs and usage.
 
 * It is possible to programmatically query your cost and usage data via the Cost Explorer API.
+
+**AWS Service Health Dashboard**
+	\- shows reported service events for services across AWS Regions.
+	\- you don't need to sign in or have an AWS account to access the AWS Service Health Dashboard.
+
+ **AWS Personal Health Dashboard**
+	 \- shows events that are specific to your account.
