--- a/3. Simple Storage Service (S3).md
+++ b/3. Simple Storage Service (S3).md
@@ -730,3 +730,9 @@ Access Point Policies
 
 Access Point Reference: https://docs.aws.amazon.com/AmazonS3/latest/dev/creating-access-points.html#access-points-policies
 
+## Other S3 Features
+
+Requester Pays
+	\- requester, instead of the bucket owner, pays for the cost of the requests and data downloaded from the bucket.
+
+* When Enabled Anonymous access to that bucket will not be allowed anymore.
