--- a/7. Advanced EC2 using User Data.md
+++ b/7. Advanced EC2 using User Data.md
@@ -291,3 +291,8 @@ Hibernation
 	\- reducing the startup time taken by applications, and saves effort in setting up the environment or applications all over again.
 
 * It is not possible to Enable or Disable Hibernation once instance is launched.
+
+Elastic Fabric Adapter
+	\- a network device that you can attach to your Amazon EC2 instance to accelerate High Performance Computing (HPC) and machine learning applications.
+	\- has OS-bypass capabilities.
+	\- provides lower and more consistent latency and higher throughput than the TCP transport.
