--- a/1. AWS Fundamentals.md
+++ b/1. AWS Fundamentals.md
@@ -45,7 +45,7 @@ Availability Zones
 
 ![AWS Fundamentals-06-08-2024-1](images/AWS%20Fundamentals-06-08-2024-1.png)
 
-### Service Resiliency: 
+ **Service Resiliency:** 
 
 * Globally Resilient Services
 	\- a service operates globally with a single database and its data is replicated across multiple regions inside AWS.
