Edit: S3, RDS, Others

--- a/19. Other Services & Features.md
+++ b/19. Other Services & Features.md
@@ -111,3 +111,7 @@ High-Cardinality (Database Concept)
 	\- is a service provided by Amazon Web Services (AWS) that helps you visualize, understand, and analyze your AWS costs and usage.
 
 * It is possible to programmatically query your cost and usage data via the Cost Explorer API.
+
+**Amazon Pinpoint**
+	\- can track events based on actions that occurs when a user interacts with one of your applications.
+	
