--- a/3. Simple Storage Service (S3).md
+++ b/3. Simple Storage Service (S3).md
@@ -59,7 +59,7 @@ Access Control Lists (ACLs)
 
 ![Simple Storage Service (S3)-07-01-2024-4](images/Simple%20Storage%20Service%20(S3)-07-01-2024-4.png)
 
-# S3 Static Website Hosting
+## S3 Static Website Hosting
 
 ![Simple Storage Service (S3)-07-01-2024-5](images/Simple%20Storage%20Service%20(S3)-07-01-2024-5.png)
 
@@ -275,7 +275,7 @@ Key Policy
 
 ![Simple Storage Service (S3)-07-01-2024-15](images/Simple%20Storage%20Service%20(S3)-07-01-2024-15.png)
 
-# S3 Object Encryption CSE/SSE
+## S3 Object Encryption CSE/SSE
 
 * Buckets are not encrypted objects are. You don’t define encryption at a bucket level.
 * “Bucket Default Encryption” is different.
@@ -541,7 +541,7 @@ Expiration Actions
 * If transition from S3 Standard it needs to be there for a minimum of 30 days before you can lifecycle transition that object into either of those Infrequent Tiers.
 * An additional 30 days is needed when transitioning from Infrequent Tiers into Glacier tiers if it is all contained in a single rule.
 
-# S3 Replication
+## S3 Replication
 
 * Replication configuration is applied to the source bucket.
 * The configuration requires the specification of the destination bucket as part of that replication and also the IAM role to use for the replication process.
@@ -602,7 +602,7 @@ Bi-Directional Replication
 
 ![Simple Storage Service (S3)-07-01-2024-35](images/Simple%20Storage%20Service%20(S3)-07-01-2024-35.png)
 
-# S3 Presigned URLs
+## S3 Presigned URLs
 
 * A way that you can give another person or application access to an object inside an S3 bucket using your credentials in a safe and secure way.
 * Ideal for giving short term access to a certain bucket or object in a bucket to an unauthenticated principal need it be.
@@ -621,7 +621,7 @@ Keypoints
 * Best practice is to not do so as Presigned URLs can have longer expiry durations in comparison to the IAM Role assumed for its generation.
 * You can generate a Presigned URL for an object that does not exist.
 
-# S3 Select and Glacier Select
+## S3 Select and Glacier Select
 
 * Ways to retrieve parts of objects rather than the entire objects.
 * S3 and Glacier provide services which allow you access to partial objects.
