--- a/9. Relational Database Service (RDS).md
+++ b/9. Relational Database Service (RDS).md
@@ -420,6 +420,7 @@ Recovery Time Objective (RTO)
 
 Transparent Data Encryption
 	\- encryption which is supported and handled within the DB engine itself.
+	\- encrypts data at rest.
 
 **RDS KMS Encryption & TDE Architecture**
 
@@ -429,7 +430,7 @@ Transparent Data Encryption
 
 ![Relational Database Service (RDS)-07-24-2024-20](images/Relational%20Database%20Service%20(RDS)-07-24-2024-20.png)
 
-* RDS can make use of IAM Authentication through the Local DB account.
+* RDS can make use of IAM Authentication through the Local DB account (MySQL and PostgreSQL).
 * Configure Local DB account to use AWS Authentication Token/s.
 * Attach a policy to Users or Roles that maps IAM Identity onto the Local RDS (DB) User/account.
 
