--- a/19. Other Services & Features.md
+++ b/19. Other Services & Features.md
@@ -121,3 +121,7 @@ High-Cardinality (Database Concept)
 
  **AWS Personal Health Dashboard**
 	 \- shows events that are specific to your account.
+
+**AWS Elastic Disaster Recovery**
+	\- provides continuous block-level replication, recovery orchestration, and automated server conversion capabilities.
+	\- allow customers to achieve a crash-consistent recovery point objective (RPO) of seconds, and a recovery time objective (RTO) typically ranging between 5–20 minutes.
