--- a/5. Elastic Compute Cloud (EC2) Basics.md
+++ b/5. Elastic Compute Cloud (EC2) Basics.md
@@ -566,7 +566,7 @@ Block Device Mapping
 * Can be copied between Regions (includes its snapshots).
 * You can share an AMI to another AWS Account or to an Organization/OUs.
 
-**EC2 Purchase Options**
+## EC2 Purchase Options
 
 **Priority Hierarchy:**
 
