--- a/19. Other Services & Features.md
+++ b/19. Other Services & Features.md
@@ -61,6 +61,7 @@
 
 **AWS Batch**
 	\- it handles job execution and compute resource management, allowing you to focus on developing applications or analyzing results instead of setting up and managing infrastructure.
+	\- a powerful tool for developers, scientists, and engineers who need to run a large number of batch and ML computing jobs.
 
 **Local Gateway**
 	\- enables connectivity between your Outpost subnets and your on-premises network.
@@ -125,3 +126,10 @@ High-Cardinality (Database Concept)
 **AWS Elastic Disaster Recovery**
 	\- provides continuous block-level replication, recovery orchestration, and automated server conversion capabilities.
 	\- allow customers to achieve a crash-consistent recovery point objective (RPO) of seconds, and a recovery time objective (RTO) typically ranging between 5–20 minutes.
+
+**AWS AppSync**
+	\-  a serverless GraphQL and Pub/Sub API service that simplifies building modern web and mobile applications.
+	\- provides a robust, scalable GraphQL interface for application developers to combine data from multiple sources, including Amazon DynamoDB, AWS Lambda, and HTTP APIs.
+
+GraphQL
+	\- a data language to enable client apps to fetch, change and subscribe to data from servers.
