--- a/7. Advanced EC2 using User Data.md
+++ b/7. Advanced EC2 using User Data.md
@@ -292,7 +292,12 @@ Hibernation
 
 * It is not possible to Enable or Disable Hibernation once instance is launched.
 
-Elastic Fabric Adapter
+Elastic Fabric Adapter (EFA)
 	\- a network device that you can attach to your Amazon EC2 instance to accelerate High Performance Computing (HPC) and machine learning applications.
 	\- has OS-bypass capabilities.
 	\- provides lower and more consistent latency and higher throughput than the TCP transport.
+
+* OS-bypass is not supported on Windows Instances.
+
+Elastic Network Adapter (ENA)
+	\- similar to EFA without the OS-bypass.
