--- a/9. Relational Database Service (RDS).md
+++ b/9. Relational Database Service (RDS).md
@@ -698,3 +698,7 @@ Schema Conversion Tool (SCT)
 
 RDS Storage Auto Scaling
 	\- automatically scales storage capacity in response to growing database workloads, with zero downtime.
+
+**Aurora Replica Features**
+* If you are running Aurora Serverless and the DB instance or AZ becomes unavailable, Aurora will automatically recreate the DB instance in a different AZ.
+* If you do not have an Amazon Aurora Replica (i.e., single instance) and are not running Aurora Serverless, Aurora will attempt to create a new DB Instance in the same Availability Zone as the original instance and is done on a best-effort basis.
