--- a/19. Other Services & Features.md
+++ b/19. Other Services & Features.md
@@ -133,3 +133,11 @@ High-Cardinality (Database Concept)
 
 GraphQL
 	\- a data language to enable client apps to fetch, change and subscribe to data from servers.
+
+**AWS Trusted Advisor**
+	\- an online tool that provides you with real-time guidance to help you provision your resources following AWS best practices.
+	\- it inspects your AWS environment and makes recommendations for saving money, improving system performance and reliability, or closing security gaps.
+
+**AWS Glue DataBrew**
+	\- essentially a no-code tool that streamlines the process of preparing data for analysis and machine learning.
+	\- offer built-in data profiling and lineage tracking.
