--- a/1. AWS Fundamentals.md
+++ b/1. AWS Fundamentals.md
@@ -373,5 +373,5 @@ Transfer Lock
 
 ![AWS Fundamentals-06-08-2024-22](images/AWS%20Fundamentals-06-08-2024-22.png)
 
-DNS Time to Live (TTL)
+DNS Time-to-Live (TTL)
 	- a numeric value in seconds.
