--- a/10. Elastic File System (EFS) - Network Storage and Data Lifecycle.md
+++ b/10. Elastic File System (EFS) - Network Storage and Data Lifecycle.md
@@ -47,7 +47,7 @@ POSIX Permissions
 * You can use Lifecycle policies to move data between classes.
 
 1. Standard (Default)
-	\- used for frequently accessed files.**
+	\- used for frequently accessed files.
 
 2. Infrequent Access (IA)
 	\- lower cost storage class.
