--- a/5. Elastic Compute Cloud (EC2) Basics.md
+++ b/5. Elastic Compute Cloud (EC2) Basics.md
@@ -102,8 +102,7 @@ Elastic Block Store (EBS)
 * Restarting an instance does not move it into another host.
 
 1. The host fails or is taken down for maintenance.
-2. If an instance is stopped and then started, which is different than just restarting.**
-**
+2. If an instance is stopped and then started, which is different than just restarting.
 
 Migration
 	\- taking a copy of an instance and making a brand new one in a different Availability Zone.
@@ -243,8 +242,9 @@ Snapshot
 	\- create volume from snapshot when migrating between AZs.
 	\- snapshots in S3 are regionally resilient.
 
-	Billing\
-	\* Gigabyte per month metric but performance in some cases.
+Billing
+
+* Gigabyte per month metric but performance in some cases.
 
 EBS Architecture Sample
 ![Elastic Compute Cloud (EC2) Basics-07-13-2024-7](images/Elastic%20Compute%20Cloud%20(EC2)%20Basics-07-13-2024-7.png)
