--- a/6. Containers & Elastic Container Service (ECS).md
+++ b/6. Containers & Elastic Container Service (ECS).md
@@ -197,7 +197,7 @@ Pods
 
 ![Containers & Elastic Container Service (ECS)-07-20-2024-10](images/Containers%20&%20Elastic%20Container%20Service%20(ECS)-07-20-2024-10.png)
 
-1. kube-appiserver
+1. kube-apiserver
 	\- the front end for the Kubernetes control plane.
 	\- what nodes and other cluster elements interact with.
 	\- can be horizontally scaled for HA and performance.
