--- a/7. Advanced EC2 using User Data.md
+++ b/7. Advanced EC2 using User Data.md
@@ -77,7 +77,7 @@ Instance Profile
 * Credentials are delivered via meta-data (iam/security-credentas/role-name).
 * Automatically rotated so they are always valid.
 * Should always use roles rather than adding access into instance.
-* CLU tools will use ROLE credentials automatically.**
+* CLI tools will use ROLE credentials automatically.
 
 Credential Precedence Reference: https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-configure.html#cli-configure-quickstart-precedence
 
