--- a/8. Route 53 - Global DNS.md
+++ b/8. Route 53 - Global DNS.md
@@ -6,7 +6,7 @@
 * A zone hosts DNS records(A, AAAA, TXT, & etc).
 
 Hosted Zone
-	\- databases which are reference via delegation using name server records.
+	\- databases which are referenced via delegation using name server records.
 	\- a DNS database for a given section of the global DNS database.
 	\- created automatically when you register a domain using Route53.
 	\- can also be created separately if you wanted to register a domain elsewhere.
@@ -105,7 +105,7 @@ Limitations
 	* String Matching
 		\- has the checks of previous with an additional check. 
 		\- R53 Health Check receives a response body in the next 2 seconds which it then checks for the string that you specify.
-		\- the string must appear entirely in the first 5120 bytes of the response body. **
+		\- the string must appear entirely in the first 5120 bytes of the response body.
 
 **3 Types of Checks**
 
