--- a/9. Relational Database Service (RDS).md
+++ b/9. Relational Database Service (RDS).md
@@ -278,7 +278,7 @@ CNAME
 * RDS is capable of having 1 Writer Instance replicate to 2 Reader (in another AZ) Instances.
 * Writer Instance replicates Synchronously to the Reader Instances.
 * While data is sent to the Writer and it’s viewed as being committed when at least one of the Readers confirms that it has been written.
-* Runs on much faster hardware (Graviton + NVME SSD then flushed to EBS).**
+* Runs on much faster hardware (Graviton + NVME SSD then flushed to EBS).
 
 Committed
 	\- when data has been sent and stored to the Writer Instance and it has been replicated to at least 1 Reader.
@@ -474,7 +474,7 @@ RDS Custom
 	* Replicas within Aurora can be used for Reads during normal operation.
 * Aurora uses a Shared Cluster Volume instead of a local storage for its compute instance.
 * Replicas can be used for Failover scenarios.
-* Can have up to 15 Replicas (Any can be the Failover Target).
+* Can have up to 15 Replicas (Read Replica-like)(Any can be the Failover Target).
 
 Cluster Volume
 	\- storage that shared and available to all compute instances within a Cluster.
@@ -545,7 +545,7 @@ Aurora Native Function
 * You can set Minimum and Maximum ACU values that the Aurora Serverless will scale between.
 * Cluster adjusts on load and can even go down to 0 (paused).
 * Consumption billing is on a per second basis.
-* Same resilience as Aurora (6 copies across AZs)
+* Same resilience as Aurora (6 copies across AZs)(Shared Cluster Volume)
 
 Aurora Capacity Units (ACU)
 	\- represent a certain amount of compute and a corresponding amount of memory.
@@ -556,6 +556,7 @@ Share Proxy Fleet
 	\- broker a connection between the application and Aurora Capacity Units.
 
 **Aurora Serverless Architecture**
+
 ![Relational Database Service (RDS)-07-24-2024-23](images/Relational%20Database%20Service%20(RDS)-07-24-2024-23.png)
 
 **Use Case:**
@@ -614,7 +615,7 @@ Read Endpoint
 ![Relational Database Service (RDS)-07-24-2024-25](images/Relational%20Database%20Service%20(RDS)-07-24-2024-25.png)
 
 * This feature allows an Aurora Cluster to have multiple instances which are capable of performing both Read and Writes.
-* No Cluster Endpoint to use an application is responsible for connecting to instances within the Cluster.
+* No Cluster Endpoint to use. An application is responsible for connecting to instances within the Cluster.
 * No load balancing across instance with the Multi Master Cluster, the application connects to one or all of the instances in the Cluster.
 * To commit a change in the Database a Quorum of nodes need to agree of the change.
 * In case there is a conflict the current change it can be rejected by all nodes.
