--- a/11. High Availability and Scaling (ELB, ASG…).md
+++ b/11. High Availability and Scaling (ELB, ASG…).md
@@ -12,7 +12,7 @@
 ![High Availability and Scaling (ELB, ASG…)-07-28-2024](images/High%20Availability%20and%20Scaling%20(ELB,%20ASG…)-07-28-2024.png)
 
 * Globally DNS is used for service discovery, regional based health checks and request routing.
-* Content Delivery Networks (CDN) (CloudFront) are used to cache content globally even as close to end users as possible to improve performance.
+* Content Delivery Networks (CDN)(CloudFront) are used to cache content globally even as close to end users as possible to improve performance.
 
 **Region Architecture**
 
@@ -54,6 +54,7 @@ Caching Layer
 3. Network Load Balancer (NLB) (V2)
 	\- supports TCP, TLS (Secure Form of TCP), and UDP Protocols.
 	\- for applications which don’t use HTTP or HTTPS (e.g. Email Servers, SSH Servers, etc).
+	\- offers support for HTTP/HTTPS Health Checks.
 
 * V2 LBs are faster and support target groups and rules, which allow you to use a single LB for multiple things.
 
@@ -170,11 +171,11 @@ Actions
 Listener Rule
 	\- defines how incoming traffic on a specific port should be handled by the load balancer.
 
-Host Rule/Condition
-	\- used to route traffic based on the host header of an incoming HTTP request.
-
 Path Condition
 	\- allows you to route a client request based on the URL path of the HTTP header.
+
+Host Rule/Condition
+	\- used to route traffic based on the host header of an incoming HTTP request.
 
 * You can perform decisions based on anything which you can observe at Layer 7.
 
@@ -187,6 +188,7 @@ Path Condition
 * Health checks just check Internet Control Message Protocol (ICMP) / TCP Handshake.
 * NLBs can have Static IP’s (useful for whitelisting).
 * Can forward TCP to instances (end-to-end encryption).
+* Can perform HTTP/HTTPS Health Checks.
 * Used with PrivateLink to provide services to other VPCs.
 
 **Quick Comparison of ALB vs NLB**
@@ -226,6 +228,7 @@ Launch Configuration
 
 Launch Templates
 	\- same task LC does, but can also be used to provision EC2 Instances from the AWS Console/CLI.
+	\- has versioning capabilities.
 
 ## Auto-Scaling Groups
 
@@ -276,6 +279,7 @@ Cooldown Period
 	\- controls how long to wait at the end of a scaling action before doing another.
 
 **Architecture**
+
 ![High Availability and Scaling (ELB, ASG…)-07-28-2024-11](images/High%20Availability%20and%20Scaling%20(ELB,%20ASG…)-07-28-2024-11.png)
 
 Self-Healing
@@ -303,6 +307,7 @@ Scaling Processes
 
 Standby
 	\- suspends any ASG activities on a specific instance.
+	\- still part of the Auto Scaling group, but they do not actively handle load balancer traffic.
 
 **Key Concepts**
 
@@ -324,14 +329,16 @@ Target Tracking
 	\- you define an ideal value and ASG keeps the metric at the value that you want and adjusts the capacity to attain that.
 
 Scaling Based on SQS
-	\- increase and decrease capacity based on approximate number of messages visible (ApproximateNumberOfMessagesVisible).
+	\- increase and decrease capacity based on certain SQS Attribute (Amount of Messages, Age of Messages, and etc).
 
 **Simple Scaling Architecture**
+
 ![High Availability and Scaling (ELB, ASG…)-07-28-2024-14](images/High%20Availability%20and%20Scaling%20(ELB,%20ASG…)-07-28-2024-14.png)
 
 * You are adding or removing the same amount no matter how extreme the increases or decreases in the metric you are monitoring.
 
 **Step Scaling Architecture**
+
 ![High Availability and Scaling (ELB, ASG…)-07-28-2024-15](images/High%20Availability%20and%20Scaling%20(ELB,%20ASG…)-07-28-2024-15.png)
 
 * You have more flexibility as you can add or decreases based on increments or decrements of the metric you are monitoring.
@@ -353,6 +360,7 @@ Scaling Based on SQS
 * Can be integrated with EventBridge or SNS Notifications, which allow your systems to perform event driven processing based on Launch or Termination of EC2 Instances.
 
 **Lifecycle Hooks Architecture**
+
 ![High Availability and Scaling (ELB, ASG…)-07-28-2024-16](images/High%20Availability%20and%20Scaling%20(ELB,%20ASG…)-07-28-2024-16.png)
 
 ## ASG Health Check Comparison - EC2 vs ELB
@@ -420,7 +428,7 @@ Health Check Grace Period
 2 Major Components
 
 1. Gateway Load Balancer Endpoints
-	\- runs from a VPC where the traffic you to monitor, filter, or control originates from or is destined to.
+	\- runs from a VPC where the traffic you want to monitor, filter, or control originates from or is destined to.
 
 2. Gateway Load Balancer
 	\- load balances packets across multiple back end instances.
@@ -432,4 +440,3 @@ GENEVE
 
 **GWLB 101 Architecture**
 ![High Availability and Scaling (ELB, ASG…)-07-28-2024-18](images/High%20Availability%20and%20Scaling%20(ELB,%20ASG…)-07-28-2024-18.png)
-
