--- a/12. Serverless and Application Services.md
+++ b/12. Serverless and Application Services.md
@@ -34,7 +34,7 @@ Lambda@Edge 
 * 1769MB of Memory = 1 vCPU
 * Runtime Environment has disk space allocation with 512MB (Default) up to 10240MB mounted as /tmp.
 
-Function TImeout
+Function Timeout
 	\- Lambda Functions can run for up to 900 Seconds or 15 Minutes.
 	\- for anything beyond 15 Minutes you can’t use Lambda directly.
 
@@ -290,7 +290,7 @@ States
 
 * Influences the speed and maximum duration.
 
-1. Standard Workflow (Default
+1. Standard Workflow (Default)
 	\- has a 1 year execution limit.
 
 2. Express Workflow
@@ -351,8 +351,10 @@ Application Programming Interface (API)
 
 Throttling
 	\- limits how often individuals use APIs.
+	\- for protecting backend servers.
 
 **API Gateway Architecture**
+
 ![Serverless and Application Services-07-31-2024-9](images/Serverless%20and%20Application%20Services-07-31-2024-9.png)
 
 **3 Phases in API Gateway Interactions**
@@ -390,6 +392,7 @@ Private Endpoints
 	\- only accessible within a VPC via an interface point.
 
 **API Gateway Stages**
+
 ![Serverless and Application Services-07-31-2024-11](images/Serverless%20and%20Application%20Services-07-31-2024-11.png)
 
 * APIs are deployed to stages, and each stage has one deployment.
@@ -822,7 +825,7 @@ Job Bookmarking
 * For systems that support JMS API, and protocols such as AQMP, mQTT, OpenWire, and STOMP.
 * Provides both Queues (One-to-One) and Topics (One-to-Many).
 * You are provided with message broker servers that can either be Single Instance or HA Pair (Active/Standby).
-* VPC Based and not a Pubic Service.
+* VPC Based and not a Public Service.
 * No native AWS integration meaning you cannot use it with other AWS services directly.
 
 **Amazon MQ Architecture**
