--- a/13. Global Content Delivery and Optimization.md
+++ b/13. Global Content Delivery and Optimization.md
@@ -218,7 +218,7 @@ Origin Access Identity (Origin Access Control)
 	\- can be accessed by any viewer.
 
 2. Private
-	\- any requests made to CloudFront need to be made with a Signed Cookie or Signed URL \or they’’ll be denied.
+	\- any requests made to CloudFront need to be made with a Signed Cookie or Signed URL or they’ll be denied.
 
 Old Method
 	\* A root account user creates a CloudFront key.
