--- a/14. Advanced VPC Networks.md
+++ b/14. Advanced VPC Networks.md
@@ -24,6 +24,7 @@ Amazon Athena
 	\- for querying logs stored in S3 using SQL.
 
 **VPC Flow Logs Architecture**
+
 ![Advanced VPC Networks-08-04-2024](images/Advanced%20VPC%20Networks-08-04-2024.png)
 
 ![Advanced VPC Networks-08-04-2024-1](images/Advanced%20VPC%20Networks-08-04-2024-1.png)
@@ -67,7 +68,7 @@ Endpoint Policy
 
 **2 Main Use Cases**
 
-1. Allowing a Private VPC access to pubic resources without allowing other public access.
+1. Allowing a Private VPC access to public resources without allowing other public access.
 2. Private-only S3 Buckets or Prevent Leaky Buckets by allowing access only from a Gateway Endpoint.
 
 * Limitation of Gateway Endpoints is that they are only access inside that specific VPC.
@@ -77,6 +78,7 @@ Endpoint Policy
 ![Advanced VPC Networks-08-04-2024-3](images/Advanced%20VPC%20Networks-08-04-2024-3.png)
 
 **With Gateway Endpoint Architecture**
+
 ![Advanced VPC Networks-08-04-2024-4](images/Advanced%20VPC%20Networks-08-04-2024-4.png)
 
 ## VPC Endpoints - Interface
@@ -121,7 +123,7 @@ PrivateDNS (Enabled by Default)
 * VPC Peering is a service that lets you create a private and encrypted network link between 2 VPCs.
 * 1 Peering connection links 2, and only 2, VPCs.
 * Works for VPCs in the Same Region/Cross-Region and the VPCs can be in the Same Account/Cross-Account.
-* Upon creating a VPC Peer, you can enable an option so that Pubic Hostnames of services resolve to Private IPs (Optional).
+* Upon creating a VPC Peer, you can enable an option so that Public Hostnames of services resolve to Private IPs (Optional).
 * If VPCs are in the same region, then they can reference each other using Security Group IDs.
 * VPC Peering does not support Transitive Peering.
 * To fully configure connectivity between hose VPCs, you need Routing Configurations, SGs and NACLs can filter.
