--- a/15. Hybrid Environments and Migration.md
+++ b/15. Hybrid Environments and Migration.md
@@ -23,6 +23,7 @@ External BGP (eBGP)
 	\- routing between AS’s.
 
 **BGP Architecture**
+
 ![Hybrid Environments and Migration-08-04-2024](images/Hybrid%20Environments%20and%20Migration-08-04-2024.png)
 
 * BGP is designed to exchange network topology, and it does by exchanging paths between AS’s.
@@ -374,7 +375,7 @@ Use Case
 ## Storage Gateway - File
 
 * File Gateway links on-premises File Storage and S3.
-* You create one or more Mount Points (Shares) available via NFS (Linux) or SMD (Windows).
+* You create one or more Mount Points (Shares) available via NFS (Linux) or SMB (Windows).
 * File Shares or Mount Points map directly to an S3 Bucket.
 * You are able to manage the S3 Bucket and have visibility of that S3 Bucket.
 * Files stored into a Mount Point are visible as objects in an S3 Bucket and vice versa.
@@ -395,6 +396,7 @@ Bucket Share
 	\- AWS S3 Bucket and on-premises File Share.
 
 **Multiple Contributors Architecture**
+
 ![Hybrid Environments and Migration-08-04-2024-19](images/Hybrid%20Environments%20and%20Migration-08-04-2024-19.png)
 
 * When you update a file on a Local Storage Gateway that update is copied into S3 (Automatic).
