--- a/16. Security, Deployment, and Operations.md
+++ b/16. Security, Deployment, and Operations.md
@@ -93,7 +93,7 @@ Action
 * Allow, Count, and Captcha can only have a Custom Header.
 
 Custom Header
-	\- means you application can react to traffic which has been matched.
+	\- means your application can react to traffic which has been matched.
 	\- prefixed with x-amzn-waf-*.
 
 Labels
@@ -323,6 +323,7 @@ Member
 	\- accounts that accept invitation from the Master account become member accounts.
 
 **GuardDuty Architecture**
+
 ![Security, Deployment, and Operations-08-07-2024-10](images/Security,%20Deployment,%20and%20Operations-08-07-2024-10.png)
 
 **Supported Data Sources**
