--- a/19. Other Services & Features.md
+++ b/19. Other Services & Features.md
@@ -27,7 +27,7 @@
 **Amazon Wavelength**
 	\- it embeds AWS compute and storage services within 5G networks, providing mobile edge computing infrastructure for developing, deploying, and scaling ultra-low-latency applications.
 
-**AWS Serverless Application Repository**
+**AWS Serverless Application Repository (SAM)**
 	\- a managed repository for serverless applications. It enables teams, organizations, and individual developers to store and share reusable applications, and quickly assemble and deploy serverless architectures in powerful new ways.
 
 **AWS X-Ray**
@@ -91,7 +91,7 @@
 **AWS Artifact**
 	\- it provides on-demand access to AWS' security and compliance reports and select online agreements.
 
-Throttling
+Throttling (API Gateway)
 	\- it ensures that API traffic is controlled to help your backend services maintain performance and availability.
 
 **AWS Outpost**
@@ -122,7 +122,7 @@ High-Cardinality (Database Concept)
 	\- you don't need to sign in or have an AWS account to access the AWS Service Health Dashboard.
 
  **AWS Personal Health Dashboard**
-	 \- shows events that are specific to your account.
+	 \- shows health events of resources specific to your account.
 
 **AWS Elastic Disaster Recovery**
 	\- provides continuous block-level replication, recovery orchestration, and automated server conversion capabilities.
