--- a/17. NoSQL Databases & DynamoDB.md
+++ b/17. NoSQL Databases & DynamoDB.md
@@ -202,6 +202,14 @@ Last Writer Wins
 
 * DAX is an in-memory cache that is designed to reduce the response time of read operations from milliseconds to microseconds.
 
+**Supported Languages**
+
+* Python
+* Java
+* Go
+* .Net/C#
+* Node.js
+
 **Traditional Caches vs DAX**
 
 ![NoSQL Databases & DynamoDB-08-09-2024-12](images/NoSQL%20Databases%20&%20DynamoDB-08-09-2024-12.png)
